feat(data): add postgres and sqlite providers (#232)
## Type

- [x] `feat` — New feature
- [x] `fix` — Bug fix
- [ ] `refactor` — Code restructure (no behavior change)
- [x] `docs` — Documentation only
- [x] `test` — Test coverage
- [x] `chore` — Build, CI, tooling
- [ ] `perf` — Performance improvement

## Summary

Add shared SQL contract tokens plus Postgres/SQLite providers and
runnable examples, then follow up with compose setups and review-driven
fixes (config module naming, cleanup wrapping, and health handler error
handling).

## Changes

- Add `modkit/data/sqlmodule`, provider modules, and named-instance
fixes.
- Add `examples/hello-postgres` and `examples/hello-sqlite` with smoke
tests.
- Add docker-compose + Dockerfiles for hello-simple/postgres/sqlite and
update compose base image for hello-mysql.
- Update example README docs for compose usage.
- Wrap DB cleanup errors and honor explicit `POSTGRES_MAX_IDLE_CONNS=0`.
- Return 500 on JSON encode failure in hello-postgres health handler.

## Breaking Changes

None.

## Validation

```bash
make fmt
make lint
make vuln
make test
make test-coverage
make cli-smoke-build
make cli-smoke-scaffold

# Compose verification (run from example dirs)
# hello-simple
# docker compose up -d --build
# curl http://localhost:8080/health
# curl http://localhost:8080/greet
# docker compose down -v

# hello-postgres
# docker compose up -d --build
# curl http://localhost:8080/api/v1/health
# docker compose down -v

# hello-sqlite
# docker compose up -d --build
# curl http://localhost:8080/health
# docker compose down -v

# hello-mysql
# docker compose up -d --build
# curl http://localhost:8080/api/v1/health
# docker compose down -v
```

## Checklist

- [x] Code follows project style (`make fmt` passes)
- [x] Linter passes (`make lint`)
- [x] Vulnerability scan passes (`make vuln`)
- [x] Tests pass (`make test`)
- [x] Coverage tests pass (`make test-coverage`)
- [x] CLI smoke checks pass (`make cli-smoke-build && make
cli-smoke-scaf

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,5 @@
+version: 2
+
 run:
   timeout: 5m
   tests: true
@@ -19,8 +21,6 @@ linters:
     - gocritic     # (extensive checks)
     - ineffassign
     - misspell
-    - gofmt
-    - goimports
     - unconvert
     - unparam
     - nakedret
@@ -28,9 +28,22 @@ linters:
     # Complexity
     - gocyclo
 
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes: github.com/go-modkit/modkit
+
 linters-settings:
-  goimports:
-    local-prefixes: github.com/go-modkit/modkit
+  gosec:
+    excludes:
+      - G101
+      - G302
+      - G304
+      - G306
+      - G114
   govet:
     enable:
       - nilness
@@ -61,10 +74,9 @@ issues:
 
   exclude-rules:
     # Relax rules for tests
-    - path: _test\.go
+    - path: '.*_test\.go$'
       linters:
         - errcheck
-        - gosec
         - dupl
         - funlen
         - gocyclo
